// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Character Item Component should match snapshot for character needing reauth 1`] = `
<div>
  <div
    class="rounded-sm bg-[var(--color-bg-panel)] text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] max-w-[345px] transition-transform hover:-translate-y-1 border-2 border-[var(--color-danger-rose)]"
  >
    <div
      class="relative"
    >
      <img
        alt="Revoked Pilot"
        class="w-full max-w-[192px] aspect-square object-contain bg-[var(--color-bg-void)] mx-auto"
        src="https://image.eveonline.com/Character/22222_128.jpg"
      />
      <div
        class="absolute top-2 right-2"
        title="Authorization revoked — re-authorize required"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert h-7 w-7 text-[var(--color-danger-rose)] drop-shadow-lg"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
      </div>
    </div>
    <div
      class="p-4"
    >
      <h3
        class="text-lg font-semibold text-[var(--color-text-emphasis)]"
      >
        Revoked Pilot
      </h3>
      <div
        class="flex items-center gap-2 mt-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert h-4 w-4 text-[var(--color-danger-rose)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-transparent shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs text-[var(--color-danger-rose)] border-[var(--color-danger-rose)]/30"
          href="/api/characters/add"
        >
          Re-authorize
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Character Item Component should match snapshot for character with no scopes 1`] = `
<div>
  <div
    class="rounded-sm bg-[var(--color-bg-panel)] text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] max-w-[345px] transition-transform hover:-translate-y-1 border-2 border-[var(--color-manufacturing-amber)]"
  >
    <div
      class="relative"
    >
      <img
        alt="No Scopes Pilot"
        class="w-full max-w-[192px] aspect-square object-contain bg-[var(--color-bg-void)] mx-auto"
        src="https://image.eveonline.com/Character/11111_128.jpg"
      />
      <div
        class="absolute top-2 right-2"
        title="Scopes need updating"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-7 w-7 text-[var(--color-manufacturing-amber)] drop-shadow-lg"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
      </div>
    </div>
    <div
      class="p-4"
    >
      <h3
        class="text-lg font-semibold text-[var(--color-text-emphasis)]"
      >
        No Scopes Pilot
      </h3>
      <div
        class="flex items-center gap-2 mt-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-4 w-4 text-[var(--color-manufacturing-amber)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-transparent shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs text-[var(--color-manufacturing-amber)] border-[var(--color-manufacturing-amber)]/30"
          href="/api/characters/add"
        >
          Re-authorize
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Character Item Component should match snapshot for outdated character 1`] = `
<div>
  <div
    class="rounded-sm bg-[var(--color-bg-panel)] text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] max-w-[345px] transition-transform hover:-translate-y-1 border-2 border-[var(--color-manufacturing-amber)]"
  >
    <div
      class="relative"
    >
      <img
        alt="Outdated Pilot"
        class="w-full max-w-[192px] aspect-square object-contain bg-[var(--color-bg-void)] mx-auto"
        src="https://image.eveonline.com/Character/67890_128.jpg"
      />
      <div
        class="absolute top-2 right-2"
        title="Scopes need updating"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-7 w-7 text-[var(--color-manufacturing-amber)] drop-shadow-lg"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
      </div>
    </div>
    <div
      class="p-4"
    >
      <h3
        class="text-lg font-semibold text-[var(--color-text-emphasis)]"
      >
        Outdated Pilot
      </h3>
      <div
        class="flex items-center gap-2 mt-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-4 w-4 text-[var(--color-manufacturing-amber)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-transparent shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs text-[var(--color-manufacturing-amber)] border-[var(--color-manufacturing-amber)]/30"
          href="/api/characters/add"
        >
          Re-authorize
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Character Item Component should match snapshot for up-to-date character 1`] = `
<div>
  <div
    class="rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-panel)] text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] max-w-[345px] transition-transform hover:-translate-y-1"
  >
    <div
      class="relative"
    >
      <img
        alt="Test Pilot"
        class="w-full max-w-[192px] aspect-square object-contain bg-[var(--color-bg-void)] mx-auto"
        src="https://image.eveonline.com/Character/12345_128.jpg"
      />
    </div>
    <div
      class="p-4"
    >
      <h3
        class="text-lg font-semibold text-[var(--color-text-emphasis)]"
      >
        Test Pilot
      </h3>
    </div>
  </div>
</div>
`;
